--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div *ngFor="let renderer of renderersEndpoint?.data$ | async">
-  {{renderer.name}}
-  <span (click)="toggleRendererState(renderer)">{{renderer.state}}</span>
-  <button (click)="subscribe(renderer)">Subscribe</button>
-  <button>Unsubscribe</button>
+
+
+
+<div *ngFor="let p of players | async">
+  {{(p | async)?.name}}
+  {{(p | async)?.state}}
+  <button (click)="p.post({state:'playing'})" >Play</button>
+  <button (click)="p.post({state:'paused'})" >Pause</button>
+
 </div>
