--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
 
 
 <div *ngFor="let p of players | async">
-  {{(p | async)?.name}}
-  {{(p | async)?.state}}
-  <button (click)="p.post({state:'playing'})" >Play</button>
+  Player: {{(p | async)?.name}}<br>
+  State: {{(p | async)?.state}}<br>
+  Offset: {{(p | async)?.offset}}<br>
+  <button (click)="p.post({state:'play'})" >Play</button>
   <button (click)="p.post({state:'paused'})" >Pause</button>
 
 </div>
